# ukubot-rs

./: .envrc  .gitignore  Cargo.toml  flake.nix
.github/workflows/: build.yml  clippy.yml  docker.yml
parts/: derivation.nix  dev.nix  module.nix
src/: command.rs  config.rs  consts.rs  core.rs  handler.rs  main.rs  util.rs
src/bot/: misc.rs  mod.rs  tag.rs
src/bot/requests/: export.rs  manage.rs  mod.rs  open.rs  ticket.rs
