[package]
name = "ukubot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }

anyhow = "1.0"
chrono = "0.4.39"
dotenvy = "0.15.7"
indoc = "2.0.5"
rand = "0.9.0"
redis = { version = "0.29.0", features = ["tokio-comp"] }
redis-macros = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
strip = true
lto = "thin"
