[package]
name = "ukubot-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }

anyhow = "1.0"
chrono = "0.4.42"
dotenvy = "0.15.7"
indoc = "2.0.7"
rand = "0.9.2"
redis = { version = "1.0.0", features = ["tokio-comp"] }
redis-macros = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[profile.release]
strip = true
lto = "thin"
